--- a/config.json
+++ b/config.json
@@ -9,5 +9,17 @@
         }
        
 
+    ],
+    "port" : [
+        {
+            "title": "Virtual Airlines Management System",
+            "tag": "Backend",
+            "image": "public/img/VA.png"
+        },
+        {
+            "title": "MunManager",
+            "tag": "fullstack",
+            "image": "public/img/mun-manager2k19.png"
+        }
     ]
 }
