--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
         },
         {
             "title": "MunManager",
-            "tag": "fullstack",
+            "tag": "Fullstack",
             "image": "public/img/mun-manager2k19.png"
         }
     ]
