--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     ],
     "port" : [
         {
-            "title": "Virtual Airlines Management System",
+            "title": "Airlines Management System",
             "tag": "Fullstack",
             "image": "public/img/VA.png"
         },
