--- a/config.json
+++ b/config.json
@@ -24,6 +24,10 @@
     ],
     "education": [
         {
+            "title": "Izmir University of Economy",
+            "years": "2021-2025"  
+        },
+        {
             "title": "Bahçeşehir Anatolian High School",
             "years": "2017-2020"
         },
