--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
     ],
     "education": [
         {
-            "title": "Izmir University of Economy",
+            "title": "Izmir University of Economics",
             "years": "2020-2025"  
         },
         {
