--- a/config.json
+++ b/config.json
@@ -30,6 +30,10 @@
             "title": "Istanbul Virtual",
             "tag": "Fullstack",
             "image": "public/img/resim_2020-12-20_151811.png"
+        },{
+            "title": "Istanbul Virtual Crew Center",
+            "tag": "Fullstack",
+            "image": "public/img/istvacrew.png"
         }
     ],
     "education": [
